<resources>
    <string name="app_name">Gps4</string>
    <string name="Next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="title1">Thông tin sân bóng</string>
    <string name="text1">Thông tin sân bóng trong tay bạn</string>
    <string name="title2">Tìm đối thủ nhanh</string>
    <string name="text2">Tìm đối thủ cùng trình độ, chơi đẹp ở gần bạn</string>
    <string name="title3">Tao lập câu lạc bộ</string>
    <string name="text3">Tạo câu lạc bộ của riêng bạn và anh em</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Tiếp tục đăng nhập </string>
    <string name="login1">Chào mừng trở lại</string>
    <string name="vh">VIỆT HÀN</string>
    <string name="vh1">sân bóng đá</string>
    <string name="title_activity_maps">Map</string>
    <string name="san">San</string>
    <string name="datsan">Đặt sân</string>
    <string name="vitri">Vị trí</string>
    <string name="chiase">Chia sẻ</string>
    <string name="baoloi">Báo lỗi</string>
    <string name="sanviethan">Sân bóng Đại học Việt Hàn</string>
    <string name="diachi">Hòa Hải, Quận Ngũ Hành Sơn, Tp Đà Nẵng</string>
    <string name="phone">0921896177</string>
    <string name="time">05:00 - 22:00</string>
    <string name="advan1">Tốn phí nước uống</string>
    <string name="advan2">Tốn phí thuê bóng</string>
    <string name="advan3">Không cần đặt cọc</string>
    <string name="price">30k - 70k</string>
    <string name="hour">1 giờ</string>
    <string name="comment">Đánh giá</string>
    <string name="follow">Theo dõi</string>
    <string name="contentcm">Chưa có đánh giá</string>
    <string name="chonngay">Chọn ngày đặt</string>
    <string name="size5">SÂN 5</string>
    <string name="size7">SÂN 7</string>
    <string name="santrong">Sân còn trống vào các khoảng thời gian sau</string>
    <string name="datnhanh">Đặt nhanh 90 phút từ</string>
    <string name="giokhac">Bạn muốn đặt giờ khác?</string>
    <string name="datsantt">Đặt sân</string>
    <string name="thongtinnguoidat">Thông tin người đặt</string>
    <string name="phuongthucthanhtoan">Phương thức thanh toán</string>
    <string name="thanhtoan1">Được đảm bảo bởi quản trị viên khi có tranh chấp.</string>
    <string name="thanhtoan">Thanh toán online</string>
    <string name="cachthanhtoan">Thanh toán bằng 1 trong những cách sau</string>
    <string name="momo">MOMO</string>
    <string name="chuyenkhoan">CHUYỂN KHOẢN</string>
    <string name="time1">16:00</string>
    <string name="time2">17:30</string>
    <string name="time3">19:00</string>
    <string name="time4">20:30</string>
    <string name="mom">Thực hiện chuyển tiền (100000 VNĐ) vào tài khoản 0123456789
        với nội dung chuyển tiền là widw</string>
    <string name="nh">Ngân hàng Á Châu ACB</string>
    <string name="stk">Số tài khoản: 248188</string>
    <string name="nametk">Tên tài khoản: TRẦN LÝ THẮNG</string>
    <string name="cn">Chi nhánh: Hải Châu, Tp Đà Nẵng</string>
    <string name="st">Số tiền: 100000 VNĐ</string>
    <string name="nd">Nội dung chuyển khoản: zodw</string>
</resources>