<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgpitch3"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:contentDescription="@string/san"
            android:scaleType="fitXY"
            android:src="@drawable/imgsan"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="283dp"
            android:paddingTop="10dp"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvpname3"
                    style="@style/header2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/sanviethan"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="1dp">

                <ImageView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/address" />

                <TextView
                    android:id="@+id/tvadd3"
                    style="@style/info"
                    android:layout_width="326dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/size"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/ticket" />

                <TextView
                    android:id="@+id/ticket"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/ten"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/people" />

                <TextView
                    android:id="@+id/tvname"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/phone1"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/phone" />

                <TextView
                    android:id="@+id/phone2"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/date" />

                <TextView
                    android:id="@+id/timepick"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/datepick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:paddingLeft="10dp"
                    android:textSize="18dp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="Giá thuê sân"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="100000 VNĐ"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#A4A4A4"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_span="2"
                    android:text=""></TextView>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/datsantt"
            android:textColor="@color/yellow"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Thanh toán"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/cachthanhtoan"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/momo"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/mom"
            android:textAlignment="gravity"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/gray_dark"/>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/chuyenkhoan"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nh"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/stk"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nametk"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cn"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/st"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nd"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>