<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgpitch1"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:contentDescription="@string/san"
            android:scaleType="fitXY"
            android:src="@drawable/imgsan"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:paddingTop="10dp"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvpname1"
                    style="@style/header2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="1dp">

                <ImageView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/address" />

                <TextView
                    android:id="@+id/tvadd1"
                    style="@style/info"
                    android:layout_width="331dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/phone"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/phone" />

                <TextView
                    android:id="@+id/tvphone1"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="69dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/san"
                    app:srcCompat="@drawable/clock" />

                <TextView
                    android:id="@+id/tvtime1"
                    style="@style/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#A4A4A4"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_span="2"
                    android:text=""></TextView>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/colortxtbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/chonngay"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/datepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Chọn ngày đặt"
            android:inputType="datetime"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/santrong"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/loaisan"
            style="@style/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/size5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/datnhanh"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dip">

            <Button
                android:id="@+id/bttime1"
                style="@style/colortxtbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:maxWidth="40dip"
                android:text="@string/time1"
                android:textStyle="bold"
                app:strokeColor="@color/bordercolor"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/ttView1"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bttime2"
                style="@style/colortxtbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:maxWidth="40dip"
                android:text="@string/time2"
                android:textStyle="bold"
                app:strokeColor="@color/bordercolor"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/ttView2"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bttime3"
                style="@style/colortxtbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:maxWidth="40dip"
                android:text="@string/time3"
                android:textStyle="bold"
                app:strokeColor="@color/bordercolor"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/ttView8"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bttime4"
                style="@style/colortxtbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:maxWidth="40dip"
                android:text="@string/time4"
                android:textStyle="bold"
                app:strokeColor="@color/bordercolor"
                app:strokeWidth="1dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/giokhac"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/bordercolor"
            android:text="ĐẶT SÂN"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>